--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "@types/async-retry": "^1.4.9",
     "@types/cli-progress": "^3.11.6",
     "@types/node": "^20.0.0",
+    "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.0.0"
+  },
+  "scripts": {
+    "start": "ts-node src/run.ts",
+    "format": "npx prettier --write \"src/**/*.{ts,js,json}\"",
+    "format:check": "npx prettier --check \"src/**/*.{ts,js,json}\""
   }
 }
